--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "plastic-knives-glimmer",
+  "name": "plastic-knives",
   "version": "0.0.0",
-  "description": "A brand new Glimmer app.",
+  "description": "Plastic knives web app.",
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -19,7 +19,9 @@
     "@glimmer/resolver": "^0.3.0",
     "broccoli-asset-rev": "^2.5.0",
     "ember-cli": "github:ember-cli/ember-cli",
+    "ember-cli-autoprefixer": "^0.7.0",
     "ember-cli-inject-live-reload": "^1.6.1",
+    "ember-cli-sass": "^6.1.2",
     "ember-cli-uglify": "^1.2.0",
     "typescript": "^2.2.2"
   },
