--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
   "compilerOptions": {
     "target": "es6",
     "module": "es2015",
+    "noImplicitAny": true,
+    "strictNullChecks": true,
     "inlineSourceMap": true,
     "inlineSources": true,
     "moduleResolution": "node",
