--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "broccoli-asset-rev": "^2.5.0",
     "ember-cli": "github:ember-cli/ember-cli",
     "ember-cli-autoprefixer": "^0.7.0",
+    "ember-cli-deploy": "^1.0.0",
+    "ember-cli-deploy-build": "^1.0.0",
+    "ember-cli-deploy-git": "^1.1.1",
     "ember-cli-inject-live-reload": "^1.6.1",
     "ember-cli-sass": "^6.1.2",
     "ember-cli-uglify": "^1.2.0",
